--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -88,6 +88,12 @@ section {
     transition: ease 0.3s all;
 }
 
+.navbar__menu .menu__link.active {
+        background: #808080;
+        color: #fff;
+        transition: ease 0.3s all;
+}
+
 /* Header Styles */
 .page__header {
     background: #fff;
