style: Highlight section headings on hover

--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -114,6 +114,9 @@ section {
     color: #fff;
 }
 
+.collapsible:hover {
+    background-color: #cc1;
+}
 
 /* ---- Theme Rules ---- */
 /* Landing Container Styles */
