--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -126,6 +126,23 @@ section {
     cursor: pointer;
 }
 
+/* Scroll to top button Styles */
+#topScrollBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #ff8d00;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+
 /* ---- Theme Rules ---- */
 /* Landing Container Styles */
 .landing__container {
