--- a/projects/weather-journal-app/website/style.css
+++ b/projects/weather-journal-app/website/style.css
@@ -3,48 +3,27 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-#app{
-    display: grid;
-    grid-auto-rows: minmax(150px, auto);
-    /* grid-template-columns:  */
-    height:100vh;
+#app {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
     background: #f23557;
     color: #f0d43a;
-    justify-content: center;
-    grid-gap: 1em;
+    justify-content: space-around;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
 }
 
-.holder{
-
+.holder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .entry{
     background: rgba(59, 74, 107, .4);
-}
-
-#entryHolder{
-
-}
-
-#date{
-
-}
-
-#temp{
-
-}
-
-#content{
-
-}
-
-.headline {
-
-}
-.title{
-
 }
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
@@ -74,22 +53,31 @@ button{
     border: none;
     box-shadow: 2px 4px 5px #444;
 }
-h1{
+
+button:active {
+    background-color: #3e8e41;
+    transform: translateY(4px);
+}
+
+
+h1 {
     font-size: 36px;
 }
 
-textarea{
-    background:#22b2da;
+textarea {
+    background: #22b2da;
     color: #f0d43a;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
+    resize: none;
+    margin: 10px;
 }
 /* Reset style for HTML element on active to have no border*/
 input:focus,
 select:focus,
 textarea:focus,
 button:focus {
-    outline: none;
+    outline: auto;
 }
 /* Style for Placeholder Text*/
 ::placeholder { /* Firefox, Chrome, Opera */ 
@@ -108,4 +96,18 @@ button:focus {
     color: #f0d43a; 
     font-family: 'Oswald', sans-serif;
 
-} 
+}
+
+@media (max-width: 500px) {
+    textarea {
+        width: 250px;
+        height: 200px;
+    }
+    input {
+        width: 240px;
+    }
+    button {
+        width: 250px;
+        height: 50px;
+    }
+}
